Revised About/Bumara content, add images & thesis

--- a/about.html
+++ b/about.html
@@ -46,24 +46,26 @@
         </div>
         <div class="story__content">
             <h2>Where I Began</h2>
-            <p>I was born in a small village in Liberia towards the end of the Second Liberian Civil War. My life there seemed very peaceful. Each morning, I would bathe myself with a giant oval-shaped bowl, then go into the forest to a mucky stream where I would catch minnows with my hands.</p>
-            <p>After playing in the forest, I would return to the village to eat the meal caught by the hunters, who used primitive spears and bows. One day, the hunters came back carrying an enormous python. The women began cutting it up for a stew, preparing a large pot with all sorts of spices. When the signal was given for us to eat, I did so without hesitation.</p>
+            <p>I was born in a small village in Liberia, toward the end of the Second Liberian Civil War. To a young child, life there seemed almost impossibly peaceful. Each morning, I'd bathe with a giant oval-shaped bowl, then wander into the forest to a mucky stream where I'd spend hours catching minnows with my bare hands.</p>
+            <p>After playing in the forest, I'd return to the village for the evening meal. One day, the men came back carrying an enormous python. The women set to work immediately, cutting it up for a stew, preparing a large pot with spices I couldn't name. When the signal came to eat, I didn't hesitate.</p>
 
             <div class="story__image_two">
                 <img src="images/KG.jpeg" alt="Additional story photo" class="story__image_two">
             </div>
+        </div>
+    </div>
 </section>
 
 <!-- Full Width Story -->
 <section class="narrative">
     <div class="narrative__content">
-        <p class="narrative__lead">These tranquil, carefree days would soon be over as the remnants of the war finally reached my village.</p>
+        <p class="narrative__lead">Those tranquil, carefree days ended the way such days often do in places touched by war: suddenly, and without warning.</p>
 
-        <p>I don't quite recall when I was forced to leave, but I remember that the events following my departure were filled with terror. In an attempt to keep us out of danger, we, the children of the village, were constantly moved around. One time, enemy soldiers were spotted in our vicinity, and one almost caught me, walking just a few feet from my hiding place.</p>
+        <p>My memories of what came next are hazy. I remember being moved, often, from one location to another. The reasons were never explained to me, or if they were, I was too young to understand. Once, armed men were spotted nearby. One walked just a few feet from where I was hiding.</p>
 
-        <p>I remember feeling as if the world around me froze. The only sound I could hear was my heart pounding in my chest. My body felt as if some invisible weight was pressing down on me. I had never felt so afraid before. It wasn't until one of our guardians said we were safe that the weight lifted.</p>
+        <p>The world froze. The only sound was my heart pounding in my chest. My body felt pinned down by some invisible weight. I had never known fear like that. It wasn't until a guardian whispered that we were safe that the weight finally lifted.</p>
 
-        <p>Several years later, at the age of eight, I was adopted, moving from Liberia - the only place I had ever known - to a white, suburban household outside of Chicago. It was a stark contrast. I was suddenly in a completely alien society. These memories, specifically the constant uncertainty and fear I felt during the war and the disorientation of my new life, stay with me. They motivate me today to pursue graduate study, to equip myself with the tools necessary to help provide others with insights into difficult economic questions, so that the childhoods of others are not also defined by conflict.</p>
+        <p>Several years later, at seven years old, I was adopted and moved from Liberia, the only place I had ever known, to a suburban household outside Chicago. The contrast was jarring. I found myself in a completely alien society, trying to make sense of a world that operated by entirely different rules.</p>
     </div>
 </section>
 
@@ -71,13 +73,14 @@
 <section class="journey">
     <h2>My Journey</h2>
     <div class="journey__content">
-        <p>My journey into economics research began with a desire to understand the challenges faced by individuals and families in developing nations. At Dartmouth College, I examined the impact of violence on educational attainment for children in Nigeria, which established my interest in microeconomics.</p>
+        <p>These memories stay with me: the uncertainty, the fear, the disorientation of starting over. They are why I do the work I do today and why I chose to study economics. Not economics in the abstract, but economics as a way of understanding how the world fails people, and how it might fail them less.</p>
 
-        <p>For my undergraduate honors thesis, I examined the relationship between fluctuations in the price of gold and educational attainment in Tanzania. Using data from three rounds of the Tanzanian National Panel Survey and employing a difference-in-differences strategy, I found that as the price of gold increased, school enrollment dropped significantly among individuals living near artisanal gold mines.</p>
+        <p>At Dartmouth, I began exploring these questions directly. I examined the impact of violence on educational attainment for children in Nigeria. The project was eye-opening, not just for what I found, but for what it revealed about the tools economists have to measure harm, and the limits of those tools. It's where my interest in microeconomics took root.</p>
 
-        <p>To better understand how capital markets might influence economic decisions, I worked as a municipal bonds analyst at Nuveen, focusing on general obligation bonds, charter school bonds, and multi-family housing projects. This work taught me how market forces can sometimes perpetuate inequities.</p>
+        <p>For my honors thesis, I turned to Tanzania and a puzzle that seemed, at first glance, counterintuitive: what happens to school enrollment when gold prices rise? Using three rounds of the Tanzanian National Panel Survey and a difference-in-differences strategy, I found that higher gold prices led to lower enrollment among children living near artisanal mines. Families got wealthier, but kids left school. The opportunity cost of education, it turns out, rises with the price of gold.</p>
 
-        <p>Currently, as a Data Analyst at the Institute for Policy Research at Northwestern University, I work with city agencies in Chicago to clean, organize, and analyze administrative data on early childhood education. I led a project to unduplicate children across seven administrative databases using probabilistic matching techniques, and have contributed to several papers evaluating Chicago's Universal Pre-K program.</p>
+        <p>After graduation, I wanted to understand the other side of the equation: how capital markets shape the choices available to families and communities. As a municipal bonds analyst at Nuveen, I focused on general obligation bonds, charter school bonds, and multi-family housing projects. What I learned was sobering. Market forces don't just respond to inequities. They can perpetuate them.</p>
+        <p>Now, as a Research Analyst at the Early Childhood Research Alliance of Chicago (EC*REACH), I work with city agencies in Chicago to clean, organize, and analyze administrative data on early childhood education. I led a project to unduplicate children across seven administrative databases using probabilistic matching techniques. I've contributed to several papers evaluating Chicago's Universal Pre-K program. The work is technical, but the stakes are not. Behind every record is a child, and behind every policy decision is the question of whether we're giving that child a fair shot.</p>
     </div>
 </section>
 
