--- a/bumara.html
+++ b/bumara.html
@@ -69,9 +69,20 @@
 <!-- Solution -->
 <section class="solution">
     <h2>What We Do</h2>
-    <p class="solution__intro">We bring regulatory obligations into one connected system.</p>
+    <p class="solution__intro">Bumara is organized into five connected modules designed to work together.</p>
 
     <div class="features">
+        <div class="feature">
+            <div class="feature__icon">
+                <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <rect x="3" y="3" width="18" height="18" rx="2"/>
+                    <path d="M9 9h6M9 12h6M9 15h4"/>
+                </svg>
+            </div>
+            <h3>Compliance Hub</h3>
+            <p>A unified dashboard to monitor, manage, and complete obligations across key regulators. Track by status, get deadline reminders, and maintain a complete audit trail.</p>
+        </div>
+
         <div class="feature">
             <div class="feature__icon">
                 <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -80,7 +91,7 @@
                 </svg>
             </div>
             <h3>Smart Invoicing</h3>
-            <p>Professional, branded invoicing with built-in VAT calculations and customer management. Accurate fiscal record-keeping that ensures you're audit-ready from day one.</p>
+            <p>Professional, branded invoicing with built-in VAT calculations, customer management, and invoice history. Compliance-ready records from day one.</p>
         </div>
 
         <div class="feature">
@@ -92,18 +103,17 @@
                 </svg>
             </div>
             <h3>Automated Payroll</h3>
-            <p>A fully automated gross-to-net payroll engine that calculates PAYE, social security, and health insurance. Payroll processed in minutes - not days.</p>
+            <p>A fully automated gross-to-net payroll engine that calculates PAYE, social security, and health insurance. Payroll processed in minutes, not days.</p>
         </div>
 
         <div class="feature">
             <div class="feature__icon">
                 <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <rect x="1" y="4" width="22" height="16" rx="2"/>
-                    <line x1="1" y1="10" x2="23" y2="10"/>
+                    <path d="M22 19a2 2 0 01-2 2H4a2 2 0 01-2-2V5a2 2 0 012-2h5l2 3h9a2 2 0 012 2z"/>
                 </svg>
             </div>
-            <h3>Bumara Pay</h3>
-            <p>A dedicated payments layer to pay regulatory fees, payroll, and business expenses. Every transaction automatically linked to the relevant obligation.</p>
+            <h3>Document Management</h3>
+            <p>Centralized storage with structured folders, version history, role-based access control, and expiry tracking for licenses, certificates, and contracts.</p>
         </div>
     </div>
 </section>
@@ -134,22 +144,30 @@
 
     <div class="team__grid">
         <div class="team-member">
-            <div class="team-member__photo"></div>
+            <div class="team-member__photo">
+                <img class="team-member__photo__img" src="images/me.JPG" alt="">
+            </div>
             <h3>Arthur Raines</h3>
             <span>CEO & Co-founder</span>
         </div>
         <div class="team-member">
-            <div class="team-member__photo"></div>
+            <div class="team-member__photo">
+                <img class="team-member__photo__img" src="images/nick.png" alt="">
+            </div>
             <h3>Nicholas Zhang</h3>
             <span>CFO & Co-founder</span>
         </div>
         <div class="team-member">
-            <div class="team-member__photo"></div>
+            <div class="team-member__photo">
+                <img class="team-member__photo__img" src="images/wiseman.png" alt="">
+            </div>
             <h3>Wiseman Sangulube</h3>
             <span>COO & Co-founder</span>
         </div>
         <div class="team-member">
-            <div class="team-member__photo"></div>
+            <div class="team-member__photo">
+                <img class="team-member__photo__img" src="images/nsangu.png" alt="">
+            </div>
             <h3>Nsangu Phiri</h3>
             <span>CTO & Co-founder</span>
         </div>
