--- a/index.html
+++ b/index.html
@@ -105,13 +105,27 @@
             <p>Analysis of changing demographics of Chicago's young children.</p>
             <a href="research/Demography_Memo.pdf" target="_blank">View PDF</a>
         </article>
+
+        <article class="card card--gold">
+            <span class="card__number">04</span>
+            <div class="card__icon">
+                <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+                    <circle cx="12" cy="12" r="10"/>
+                    <path d="M12 6v2m0 8v2M9 10c0-1 1-2 3-2s3 1 3 2-1 2-3 2-3 1-3 2 1 2 3 2 3-1 3-2"/>
+                </svg>
+            </div>
+            <span class="card__label">Senior Honors Thesis</span>
+            <h3>Gold Prices & Education in Tanzania</h3>
+            <p>A 62% increase in gold prices leads to an 18.6 percentage point decline in enrollment among youth near artisanal mines, while household wealth increases.</p>
+            <a href="research/Raines_Arthur_Thesis.pdf" target="_blank">View PDF</a>
+        </article>
     </div>
 </section>
 
 <!-- Quote -->
 <section class="quote">
     <blockquote>
-        "Understanding where young children live and how their population has changed helps inform policy decisions that shape the future of our communities."
+        "I study the economics of childhood because by the time we measure the consequences of getting it wrong, it's already too late."
     </blockquote>
     <cite>Arthur Raines</cite>
 </section>
