--- a/about.html
+++ b/about.html
@@ -84,6 +84,18 @@
     </div>
 </section>
 
+
+<!-- Map -->
+
+<section class="map-section" aria-labelledby="map-title">
+    <h2 id="map-title">States I've Visited</h2>
+    <p class="map-section__intro">49 out of 50 states. Alaska, you're next.</p>
+    <div class="map-container">
+        <div id="us-map-inline" class="us-map"></div>
+    </div>
+</section>
+
+
 <!-- CTA -->
 <section class="cta-section">
     <h2>Let's Connect</h2>
@@ -91,5 +103,6 @@
     <a href="index.html#contact" class="btn btn--primary">Get In Touch</a>
 </section>
 <script src="js/main.js"></script>
+
 </body>
 </html>
