change the block quote

--- a/index.html
+++ b/index.html
@@ -125,9 +125,8 @@
 <!-- Quote -->
 <section class="quote">
     <blockquote>
-        "I study the economics of childhood because by the time we measure the consequences of getting it wrong, it's already too late."
+        "I study how early‑life conditions and resource environments shape long‑term outcomes, because by the time the consequences appear, it’s already too late to change them."
     </blockquote>
-    <cite>Arthur Raines</cite>
 </section>
 
 <!-- Contact -->
