--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 <!-- Hero -->
 <header class="about-hero">
     <h1>Arthur Raines</h1>
-    <p>Policy researcher and data analyst dedicated to understanding how economic forces shape opportunities for vulnerable populations.</p>
+    <p>Researcher and Entrepreneur dedicated to understanding how economic forces shape opportunities for vulnerable populations.</p>
 </header>
 
 <!-- Story -->
@@ -100,7 +100,7 @@
 <section class="cta-section">
     <h2>Let's Connect</h2>
     <p>Interested in discussing research collaboration or policy work?</p>
-    <a href="index.html#contact" class="btn btn--primary">Get In Touch</a>
+    <a id="contact-me" class="btn btn--primary">Get In Touch</a>
 </section>
 <script src="js/main.js"></script>
 
