--- a/index.html
+++ b/index.html
@@ -133,9 +133,10 @@
 <section class="contact" id="contact">
     <h2>Let's Get In Touch</h2>
     <p>Interested in collaborating on research or learning more about my work?</p>
-    <a href="mailto:arthur.h.raines@gmail.com" class="btn btn--primary">Contact Me</a>
+    <a id="contact-me" class="btn btn--primary">Contact Me</a>
 </section>
 <script src="js/main.js"></script>
+<script src="https://www.google.com/recaptcha/api.js"></script>
 </body>
 </html>
 
