--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arthur Raines | Policy Research & Data Analytics</title>
+    <title>Arthur Raines | Researcher & Entrepreneur</title>
+    <link rel="icon" type="image/png" href="images/Favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&family=Karla:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -43,7 +44,7 @@
         <p class="hero__location">Chicago, Illinois</p>
         <h1 class="hero__title">
             Arthur Raines<br>
-            <em>Policy Research & Analytics</em>
+            <em>Researcher & Entrepreneur</em>
         </h1>
 <!--        <p class="hero__text">-->
 <!--            Transforming complex data into actionable insights for early childhood education policy.-->
