added photo carousel

--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&family=Karla:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/carousel.css">
 </head>
 <body>
 <!-- Navigation -->
@@ -104,6 +105,6 @@
     <a id="contact-me" class="btn btn--primary">Get In Touch</a>
 </section>
 <script src="js/main.js"></script>
-
+<script src="js/carousel.js"></script>
 </body>
 </html>
