Updated the Bumara team section by adding other team photos. Added additional images to About me Page

--- a/bumara.html
+++ b/bumara.html
@@ -142,37 +142,100 @@
 
 <!-- Team -->
 <section class="team">
-    <h2>Leadership</h2>
-    <p class="team__intro">Co-founded by Arthur Raines, Nicholas Zhang, Eng. Wiseman Sangulube, and Nsangu Phiri.</p>
+    <h2>Our Team</h2>
+    <p class="team__intro">The people building the future of business operations Across Africa.</p>
 
-    <div class="team__grid">
+    <!-- Leadership -->
+    <h3 class="team__section-title">Founders</h3>
+    <div class="team__grid team__grid--founders">
         <div class="team-member">
             <div class="team-member__photo">
-                <img class="team-member__photo__img" src="images/me.JPG" alt="">
+                <img src="images/me.JPG" alt="Arthur Raines">
             </div>
-            <h3>Arthur Raines</h3>
+            <h4>Arthur Raines</h4>
             <span>CEO & Co-founder</span>
         </div>
         <div class="team-member">
             <div class="team-member__photo">
-                <img class="team-member__photo__img" src="images/nick.png" alt="">
+                <img src="images/nick.png" alt="Nicholas Zhang">
             </div>
-            <h3>Nicholas Zhang</h3>
+            <h4>Nicholas Zhang</h4>
             <span>CFO & Co-founder</span>
         </div>
         <div class="team-member">
             <div class="team-member__photo">
-                <img class="team-member__photo__img" src="images/wiseman.png" alt="">
+                <img src="images/wiseman.png" alt="Wiseman Sangulube">
             </div>
-            <h3>Wiseman Sangulube</h3>
+            <h4>Wiseman Sangulube</h4>
             <span>COO & Co-founder</span>
         </div>
         <div class="team-member">
             <div class="team-member__photo">
-                <img class="team-member__photo__img" src="images/nsangu.png" alt="">
+                <img src="images/nsangu.png" alt="Nsangu Phiri">
             </div>
-            <h3>Nsangu Phiri</h3>
+            <h4>Nsangu Phiri</h4>
             <span>CTO & Co-founder</span>
+        </div>
+    </div>
+
+    <!-- The Team -->
+    <h3 class="team__section-title">The Team</h3>
+    <div class="team__grid">
+        <div class="team-member">
+            <div class="team-member__photo">
+                <img src="images/company_head_shots_december2025-3.jpg" alt="Team Member">
+            </div>
+            <h4>Emmanuel Mwindwa</h4>
+            <span>Legal & Compliance Officer</span>
+        </div>
+        <div class="team-member">
+            <div class="team-member__photo">
+                <img src="images/company_head_shots_december2025-8.jpg" alt="Team Member">
+            </div>
+            <h4>Bianca Chisanga</h4>
+            <span>CMO</span>
+        </div>
+        <div class="team-member">
+            <div class="team-member__photo">
+                <img src="images/company_head_shots_december2025-5.jpg" alt="Team Member">
+            </div>
+            <h4>Imran Issa</h4>
+            <span>Software Developer</span>
+        </div>
+        <div class="team-member">
+            <div class="team-member__photo">
+                <img src="images/company_head_shots_december2025-4.jpg" alt="Team Member">
+            </div>
+            <h4>Chikondi Lungu</h4>
+            <span>Product Designer</span>
+        </div>
+        <div class="team-member">
+            <div class="team-member__photo">
+                <img src="images/Nalumino.jpeg" alt="Nalumino">
+            </div>
+            <h4>Nalumino Simioti</h4>
+            <span>Account Manager</span>
+        </div>
+        <div class="team-member">
+            <div class="team-member__photo">
+                <img src="images/Leah .jpg" alt="Leah">
+            </div>
+            <h4>Leah Butala</h4>
+            <span>Operations Manager</span>
+        </div>
+        <div class="team-member">
+            <div class="team-member__photo">
+                <img src="images/Samantha Mberenga.jpeg" alt="Samantha Mberenga">
+            </div>
+            <h4>Samantha Mberenga</h4>
+            <span>Account Associate</span>
+        </div>
+        <div class="team-member">
+            <div class="team-member__photo">
+                <img src="images/Chanda.jpg" alt="Chanda">
+            </div>
+            <h4>Chanda Fungamwango</h4>
+            <span>Software Developer</span>
         </div>
     </div>
 </section>
