--- a/Arthur.H.Raines.html
+++ b/Arthur.H.Raines.html
@@ -14,7 +14,7 @@
 <body>
 <!-- Navigation -->
 <nav class="nav nav--dark">
-    <a href="index.html" class="logo logo--light">AR</a>
+    <a href="Arthur.H.Raines.html" class="logo logo--light">AR</a>
     <div class="hamburger hamburger--light" id="hamburger">
         <span></span>
         <span></span>
@@ -25,7 +25,7 @@
 <!-- Nav Overlay -->
 <div class="nav-overlay" id="navOverlay">
     <ul class="nav-menu">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="Arthur.H.Raines.html">Home</a></li>
         <li><a href="#research">Research</a></li>
         <li><a href="bumara.html">Bumara</a></li>
         <li><a href="about.html">About</a></li>
