Add blog section with templates, styles, and assets
Introduce a new blog feature: adds blog index (blog.html), a short story post (dalias-tale.html), a reflection post template (reflection_blog_post_template.html), and shared blog styles (css/blog.css). Includes new JS assets for loading/filtering content (js/load_blog_content.js) and a reading progress bar (js/reading_progress_bar.js). Also updates site navigation in Arthur.H.Raines.html, about.html, and bumara.html to include a Blog link. The load_blog_content.js entry point contains the beginnings of filter logic for category buttons. [I used AI to generate this and to make css attributes consistent]

--- a/Arthur.H.Raines.html
+++ b/Arthur.H.Raines.html
@@ -29,6 +29,7 @@
         <li><a href="#research">Research</a></li>
         <li><a href="bumara.html">Bumara</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="blog.html">Blog</a></li>
         <li><a href="#contact" class="cta">Get In Touch</a></li>
     </ul>
 </div>
