--- a/bumara.html
+++ b/bumara.html
@@ -31,6 +31,7 @@
         <li><a href="Arthur.H.Raines.html#research">Research</a></li>
         <li><a href="bumara.html">Bumara</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="blog.html">Blog</a></li>
         <li><a href="Arthur.H.Raines.html#contact" class="cta">Get In Touch</a></li>
     </ul>
 </div>
