Rename main page to index.html and update links
Renamed Arthur.H.Raines.html to index.html and updated navigation/logo links across the site to point to the new filename. Updated Home/Research/Contact anchors and logo/back-to-blog hrefs in about.html, blog.html, bumara.html, dalias-tale.html, and reflection_blog_post_template.html so navigation now references index.html as the site root.

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <body>
 <!-- Navigation -->
 <nav class="nav nav--light">
-    <a href="Arthur.H.Raines.html" class="logo logo--dark">AR</a>
+    <a href="index.html" class="logo logo--dark">AR</a>
     <div class="hamburger hamburger--dark" id="hamburger">
         <span></span>
         <span></span>
@@ -26,12 +26,12 @@
 <!-- Nav Overlay -->
 <div class="nav-overlay" id="navOverlay">
     <ul class="nav-menu">
-        <li><a href="Arthur.H.Raines.html">Home</a></li>
-        <li><a href="Arthur.H.Raines.html#research">Research</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html#research">Research</a></li>
         <li><a href="bumara.html">Bumara</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="blog.html">Blog</a></li>
-        <li><a href="Arthur.H.Raines.html#contact" class="cta">Get In Touch</a></li>
+        <li><a href="index.html#contact" class="cta">Get In Touch</a></li>
     </ul>
 </div>
 
