--- a/dalias-tale.html
+++ b/dalias-tale.html
@@ -24,7 +24,7 @@
         </svg>
         Back to Blog
     </a>
-    <a href="Arthur.H.Raines.html" class="logo logo--light" style="width: 45px; height: 45px; font-size: 1.4rem;">AR</a>
+    <a href="index.html" class="logo logo--light" style="width: 45px; height: 45px; font-size: 1.4rem;">AR</a>
 </nav>
 
 <!-- Hero -->
