--- a/bumara.html
+++ b/bumara.html
@@ -16,7 +16,7 @@
 <body>
 <!-- Navigation -->
 <nav class="nav nav--dark">
-    <a href="Arthur.H.Raines.html" class="logo logo--light">AR</a>
+    <a href="index.html" class="logo logo--light">AR</a>
     <div class="hamburger hamburger--light" id="hamburger">
         <span></span>
         <span></span>
@@ -27,12 +27,12 @@
 <!-- Nav Overlay -->
 <div class="nav-overlay" id="navOverlay">
     <ul class="nav-menu">
-        <li><a href="Arthur.H.Raines.html">Home</a></li>
-        <li><a href="Arthur.H.Raines.html#research">Research</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html#research">Research</a></li>
         <li><a href="bumara.html">Bumara</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="blog.html">Blog</a></li>
-        <li><a href="Arthur.H.Raines.html#contact" class="cta">Get In Touch</a></li>
+        <li><a href="index.html#contact" class="cta">Get In Touch</a></li>
     </ul>
 </div>
 
