Add 'Name Meaning' section, styles, and images
Introduce a new "Name Meaning" section to bumara.html that explains the origin of the name using three deity cards (Bumba, Mawu, Ra). Update navigation links to point to Arthur.H.Raines.html (home, research, contact). Add comprehensive styles in css/bumara.css for the new section (layout, deity cards, overlays, synthesis block and responsive adjustments). Add image assets images/bumba.jpg, images/mawu.jpeg, images/ra.jpg and images/ra.png used by the new section.

--- a/bumara.html
+++ b/bumara.html
@@ -16,7 +16,7 @@
 <body>
 <!-- Navigation -->
 <nav class="nav nav--dark">
-    <a href="index.html" class="logo logo--light">AR</a>
+    <a href="Arthur.H.Raines.html" class="logo logo--light">AR</a>
     <div class="hamburger hamburger--light" id="hamburger">
         <span></span>
         <span></span>
@@ -27,12 +27,11 @@
 <!-- Nav Overlay -->
 <div class="nav-overlay" id="navOverlay">
     <ul class="nav-menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index.html#research">Research</a></li>
+        <li><a href="Arthur.H.Raines.html">Home</a></li>
+        <li><a href="Arthur.H.Raines.html#research">Research</a></li>
         <li><a href="bumara.html">Bumara</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="index.html#contact" class="cta">Get In Touch</a></li>
+        <li><a href="Arthur.H.Raines.html#contact" class="cta">Get In Touch</a></li>
     </ul>
 </div>
 
@@ -50,6 +49,63 @@
         </div>
     </div>
 </header>
+
+<!-- Name Meaning -->
+<section class="name-meaning">
+    <div class="name-meaning__header">
+        <span class="name-meaning__label">The Name</span>
+        <h2>What <em>Bumara</em> Means</h2>
+        <p class="name-meaning__intro">Our name comes from three powerful creation deities found in African and Egyptian mythology. Each one stands for a different part of creation, wisdom, and illumination.</p>
+    </div>
+
+    <div class="deity-grid">
+        <div class="deity-card">
+            <div class="deity-card__image">
+                <img src="images/bumba.jpg" alt="Bumba - Kuba Creator God">
+                <div class="deity-card__overlay">
+                    <span class="deity-letter">Bu</span>
+                </div>
+            </div>
+            <div class="deity-card__content">
+                <h3>Bumba</h3>
+                <span class="deity-origin">Kuba People • Central Africa</span>
+                <p>The creator god who vomited the sun, moon, stars, and all living creatures into existence. Bumba represents the power of bringing something from nothing—creation through transformation.</p>
+            </div>
+        </div>
+
+        <div class="deity-card deity-card--featured">
+            <div class="deity-card__image">
+                <img src="images/mawu.jpeg" alt="Mawu - Fon Moon Goddess">
+                <div class="deity-card__overlay">
+                    <span class="deity-letter">Ma</span>
+                </div>
+            </div>
+            <div class="deity-card__content">
+                <h3>Mawu</h3>
+                <span class="deity-origin">Fon People • West Africa</span>
+                <p>The moon goddess associated with wisdom, knowledge, and the night. Mawu embodies calm guidance, intuition, and the illumination that comes from understanding—the light that helps navigate complexity.</p>
+            </div>
+        </div>
+
+        <div class="deity-card">
+            <div class="deity-card__image">
+                <img src="images/ra.png" alt="Ra - Egyptian Sun God">
+                <div class="deity-card__overlay">
+                    <span class="deity-letter">Ra</span>
+                </div>
+            </div>
+            <div class="deity-card__content">
+                <h3>Ra</h3>
+                <span class="deity-origin">Ancient Egypt • North Africa</span>
+                <p>The sun god who sailed across the sky each day, bringing light and life to the world. Ra symbolizes radiant energy, renewal, and the daily journey of overcoming darkness.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="name-synthesis">
+        <p class="synthesis-meaning">Together, these forces represent our mission: to <strong>create</strong> systems that didn't exist before, to provide <strong>wisdom</strong> that guides businesses through complexity, and to bring <strong>light</strong> to the operations that power growth.</p>
+    </div>
+</section>
 
 <!-- Problem -->
 <section class="problem">
