Revamp blog layout, Bumara content, and CSS
Redesign the blog index and related styles for a modern editorial layout: replace the hero with a blog header, add a featured post block, introduce a simplified posts grid and newsletter, and remove the old category filter and legacy scripts. Update navigation/branding classes and tweak links. Refactor Bumara page: fix homepage links, add Blog nav item, and replace the old name-meaning section with a richer name-origin presentation using SVG symbols and updated copy; adjust module count text. Large overhaul of css/blog.css to support the new components (header, featured post, post-card styles, newsletter, responsive rules, story/post templates, reading progress, animations, and miscellaneous typography tweaks). Minor updates to index.html and dalias-tale.html to match the new layout.

--- a/dalias-tale.html
+++ b/dalias-tale.html
@@ -24,7 +24,7 @@
         </svg>
         Back to Blog
     </a>
-    <a href="index.html" class="logo logo--light" style="width: 45px; height: 45px; font-size: 1.4rem;">AR</a>
+    <a href="index.html" class="logo logo--dark" style="width: 45px; height: 45px; font-size: 1.4rem;">AR</a>
 </nav>
 
 <!-- Hero -->
@@ -62,7 +62,7 @@
 
 <!-- Story Content -->
 <article class="story-content" id="storyContent">
-    
+
     <p>"Just keep walking!" the old lady shouts. Our heads low, eyes sore, and legs too heavy to lift; I wonder when this endless march will end and so does the little boy next to me who's clearly reached his limit. "How much farther?" He asks. Too tired to give him a response and too focused on avoiding the large tree roots beneath my beaten feet, I tell him to keep walking and he starts to sob. Snot drips from his nose as he begs to go home. He trips on a root falling to his hands and knees. He tries to get up, but his knees buckle, and he collapses. I extend my hand, which he eagerly grips. His grip is weak. Scabs and bruises cover his arms and legs and his left eye appears shut, swollen from the onslaught of mosquito bites it has received these past few days. He looks pathetic. I heave him to his feet. "Moove!" a kid behind us barks in distress.</p>
 
     <p>As we begin to walk again, I start to hear a commotion coming from the tail ends of our caravan. A loud booming sound crackles through the air. Blood rushes from my thighs to my eyes and ears, and a sense of fatigue grips my arms. A kid farther back lets out a loud, desperate wail as the sound of his body hitting the forest floor echoes through our ears.</p>
@@ -141,43 +141,12 @@
     </div>
 </footer>
 
-
-<!-- Related Posts -->
-<!--<section class="related-posts">-->
-<!--    <h3>More from the Blog</h3>-->
-<!--    <div class="related-posts__grid">-->
-<!--        <article class="blog-card" data-category="reflections">-->
-<!--            <div class="blog-card__image blog-card__image&#45;&#45;reflection"></div>-->
-<!--            <div class="blog-card__content">-->
-<!--                <span class="blog-card__category blog-card__category&#45;&#45;reflection">Reflection</span>-->
-<!--                <h3 class="blog-card__title">On Leaving Home</h3>-->
-<!--                <p class="blog-card__excerpt">What it means to build a life between two worlds.</p>-->
-<!--                <div class="blog-card__meta">-->
-<!--                    <span>Coming Soon</span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </article>-->
-<!--        <article class="blog-card" data-category="economics">-->
-<!--            <div class="blog-card__image blog-card__image&#45;&#45;economics"></div>-->
-<!--            <div class="blog-card__content">-->
-<!--                <span class="blog-card__category blog-card__category&#45;&#45;economics">Economics</span>-->
-<!--                <h3 class="blog-card__title">The Economics of Early Childhood</h3>-->
-<!--                <p class="blog-card__excerpt">Why the first five years matter more than we think.</p>-->
-<!--                <div class="blog-card__meta">-->
-<!--                    <span>Coming Soon</span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </article>-->
-<!--    </div>-->
-<!--</section>-->
-
 <!-- Footer -->
 <footer class="footer">
     <p>© 2026 Arthur Raines</p>
 </footer>
 
 <script src="js/main.js"></script>
-<script src="js/reading_progress_bar.js">
-</script>
+<script src="js/reading_progress_bar.js"></script>
 </body>
 </html>
